--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     volumes:
       - media:/app/media
       - static:/app/static
-      - ../src/products/:/app/
+      - ../src/:/app/src/
     ports:
       - 8000:8000
 
